# variantview

./: CMakeLists.txt  Dockerfile.devel  Makefile  README.md
.devcontainer/: devcontainer.json
cmake/: CompilerWarnings.cmake
include/: variantView.hpp
test/: CMakeLists.txt  tVariantViews.cpp
